--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "atm",
   "version": "1.0.0",
-  "description": "",
+  "description": "this is atm machine process",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -10,6 +10,7 @@
   "author": "Huzaifa",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^5.3.0",
     "inquirer": "^9.2.16"
   },
   "devDependencies": {
